tests/baselines/reference/decoratorOnClassMethod6.errors.txt
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod6.ts(4,5): error TS1329: This function cannot be used as a decorator. Did you mean to call it first?


==== tests/cases/conformance/decorators/class/method/decoratorOnClassMethod6.ts (1 errors) ====
    declare function dec(): <T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>) => TypedPropertyDescriptor<T>;
    
    class C {
        @dec ["method"]() {}
        ~~~~
!!! error TS1329: This function cannot be used as a decorator. Did you mean to call it first?
    }